--- a/Part7/index.html
+++ b/Part7/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Demo</title>
+    <script defer src="./script.js"></script>
+<!-- This Boolean attribute is set to indicate to a browser that the script is meant to be executed 
+     after the document has been parsed, but before firing DOMContentLoaded.
+
+    Scripts with the defer attribute will prevent the DOMContentLoaded event from firing until the script 
+    has loaded and finished evaluating.
+
+    This attribute must not be used if the src attribute is absent (i.e. for inline scripts), in this case 
+    it would have no effect. -->
     <style>
-        body{
+        body {
             background-color: #1a1a1a;
             color: #fff;
         }
     </style>
 </head>
+
 <body>
-    <h1>Lorem ipsum dolor sit amet. </h1>
+    <h1>This is just for basic dom and bom nothing muc in part7 code part</h1>
 </body>
+
 </html>
