DOM exercing going on

--- a/Part8/dom.html
+++ b/Part8/dom.html
@@ -19,7 +19,7 @@
         display: none;
     }
 </style>
-<script src="./script.js"></script>
+<script defer src="./script.js"></script>
 
 </head>
 <body>
@@ -34,7 +34,23 @@
         </section> 
 
         <!-- Example 2: Traversing the DOM -->
+        <section id="example-2">
+        <h2>Traversing the DOM</h2>
+        <ul id="citiesList">
+            <li class="ny-class">New York</li>
+            <li class="t-class">Tokyo</li>
+            <li class="p-class">Paris</li>
+            <li class="l-class">London</li>
+        </ul>
+        <button id="highlightFirstCity">highlight the First City</button>
+        </section>
         
+        <!-- Example 3: Manipulating the DOM Elements-->
+         <section id="example-3">
+            <h2>Manipulating the DOM Elements.</h2>
+            <div id="coffeeOrder">Order : <span id="coffeeType">Latte</span></div>
+            <button id="changeOrder">Change order to Espresso</button>
+         </section>
         
 </body>
 </html>
