--- a/Part8/dom.html
+++ b/Part8/dom.html
@@ -51,6 +51,15 @@
             <div id="coffeeOrder">Order : <span id="coffeeType">Latte</span></div>
             <button id="changeOrder">Change order to Espresso</button>
          </section>
-        
+       
+         <!-- Example 4: Creating and inserting Element -->
+          <section id="example-4">
+            <h2>Creating and inserting Element</h2>
+            <button id="addNewItem">Add a New item to Shopping list</button>
+            <ui id="shoppingList">
+                <li>Bread</li>
+                <li>Milk</li>
+            </ui>
+          </section>
 </body>
 </html>
