last 5 challenges for DOM

--- a/Part8/dom.html
+++ b/Part8/dom.html
@@ -61,5 +61,33 @@
                 <li>Milk</li>
             </ui>
           </section>
+
+          <!-- Example 5: Removing DOM Element -->
+           <section>
+            <h2>Removing the DOM Element</h2>
+            <ui id="taskList">
+                <li>Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li>
+            </ui>
+            <button id="removeLastTask">Remove Last Task</button>
+           </section>
+
+           <!--Example 6: Event Handling in DOM  -->
+           <section>
+            <h2>Event Handling in DOM</h2>
+            <button id="clickMeButton">Click Me!</button>
+           </section>
+
+           <!-- Example 7: Event Deligation -->
+           <section>
+            <h2>Event Deligation</h2>
+            <ui id="teaList">
+                <li class="teaItem">Green Tea</li>
+                <li class="teaItem">Black Tea</li>
+                <li class="teaItem">Cutting</li>
+            </ui>
+            <p>Click on any tea to select it.</p>
+           </section>
 </body>
 </html>
