--- a/Part8/dom.html
+++ b/Part8/dom.html
@@ -89,5 +89,30 @@
             </ui>
             <p>Click on any tea to select it.</p>
            </section>
+
+           <!-- Example 8: Form Handling  -->
+            <section>
+             <h2>Form Handling</h2>
+             <form action="#" id="feedbackForm">
+             <label for="feedbackInput" >Your Feedback :</label>
+             <input type="text" id="feedbackInput" placeholder="Enter your feedback Here" />
+             <button type="submit" id="">Submit Feedback</button>  
+            </form>
+            <p id="feedbackDisplay"></p>
+            </section>
+
+            <!-- Example 9: DOM Content Loaded -->
+             <section>
+             <h2>DOM content Loaded</h2>
+             <p id="domStatus">Waiting for DOM to load....</p>
+             </section>
+        
+            <!-- Example 10: CSS classes Manipulation -->
+             <section>
+                <h2>CSS Classes Manupulation</h2>
+                <p id="descriptionText">This Paragraph will change color.</p>
+                <button id="toggleHighlight">Toggle Highlight</button>
+             </section>
+            
 </body>
 </html>
